scripts/terraform2/ecs.sg.lb.tf
resource "aws_security_group" "tfci_alb" {
  name        = "tfci-alb"
  description = "Group for load balancer"
  depends_on  = ["aws_iam_user_policy_attachment.ecs_policy_attach"]
}

resource "aws_security_group_rule" "allow_lb_outbound2" {
  type              = "egress"
  from_port         = 0
  to_port           = 65535
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = "${aws_security_group.tfci_alb.id}"
}

resource "aws_security_group_rule" "allow_web_inbound" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = "${aws_security_group.tfci_alb.id}"
}

resource "aws_security_group_rule" "allow_https_inbound" {
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = "${aws_security_group.tfci_alb.id}"
}
